--- a/server/callup-dblayer/pom.xml
+++ b/server/callup-dblayer/pom.xml
@@ -13,7 +13,13 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>   
+        </repository>
+        <repository>
+            <url>http://download.eclipse.org/rt/eclipselink/maven.repo/</url>
+            <id>eclipselink</id>
+            <layout>default</layout>
+            <name>Repository for library Library[eclipselink]</name>
+        </repository>
     </repositories> 
     
     <modelVersion>4.0.0</modelVersion>
@@ -37,7 +43,23 @@
             <groupId>org.jongo</groupId>
             <artifactId>jongo</artifactId>
             <version>0.2-early-20120423-2309</version>
-        </dependency>        
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+            <version>2.3.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
 
