--- a/server/callup-dblayer/pom.xml
+++ b/server/callup-dblayer/pom.xml
@@ -5,16 +5,7 @@
         <artifactId>server</artifactId>
         <groupId>com.phonytive.callup</groupId>
         <version>1.0.0-M1</version>
-    </parent>
-    <repositories>
-        <repository>
-            <url>http://download.eclipse.org/rt/eclipselink/maven.repo/</url>
-            <id>eclipselink</id>
-            <layout>default</layout>
-            <name>Repository for library Library[eclipselink]</name>
-        </repository>
-    </repositories> 
-    
+    </parent>    
     <modelVersion>4.0.0</modelVersion>
     <artifactId>callup-dblayer</artifactId>
     <packaging>jar</packaging>
@@ -26,14 +17,21 @@
             <version>${project.version}</version>
         </dependency>        
         <dependency>
-                <groupId>org.apache.openjpa</groupId>
-                <artifactId>openjpa-all</artifactId>
-                <version>2.0.0</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.167</version>
+            <scope>test</scope>
+        </dependency>
+       <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.13</version>
+            <type>jar</type>
         </dependency>
         <dependency>
-                <groupId>org.apache.derby</groupId>
-                <artifactId>derby</artifactId>
-                <version>10.5.3.0</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.1.4.Final</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -41,7 +39,7 @@
             <version>4.10</version>
             <scope>test</scope>
             <type>jar</type>
-        </dependency>        
+        </dependency>    
     </dependencies>
 </project>
 
